widget/gtk/nsAppShell.cpp:113:3: error: 'StopDBusListening' was not declared in this scope
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | unaffected |
firefox95 | --- | fixed |
People
(Reporter: herrtimson, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
I downloaded the latest source code from nighlty branch and compiled it, on linux-armv7a.
Actual results:
I got this error:
27:02.37 modules/xz-embedded/Unified_c_modules_xz-embedded0.o
27:02.37 /usr/bin/armv7a-unknown-linux-gnueabihf-gcc --sysroot /usr/armv7a-unknown-linux-gnueabihf -std=gnu99 -o Unified_c_modules_xz-embedded0.o -c -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/dist/system_wrappers -include /usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox-95.0/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DXZ_DEC_ARMTHUMB=1 -DXZ_USE_CRC64=1 -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox-95.0/modules/xz-embedded -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/modules/xz-embedded -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/dist/include -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/dist/include/nspr -I/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/dist/include/nss -I/usr/armv7a-unknown-linux-gnueabihf/usr/include/pixman-1 -I/usr/armv7a-unknown-linux-gnueabihf/usr/include -include /usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/mozilla-config.h -DMOZILLA_CLIENT -pipe -fomit-frame-pointer -mthumb -mno-thumb-interwork -mfpu=neon -mfloat-abi=hard -fno-strict-aliasing -funwind-tables -fPIC -ffunction-sections -fdata-sections -fno-math-errno -pthread -pipe -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wformat -Wformat-security -Wformat-overflow=2 -Wno-psabi -MD -MP -MF .deps/Unified_c_modules_xz-embedded0.o.pp -fdiagnostics-color Unified_c_modules_xz-embedded0.c
27:03.25 In file included from Unified_cpp_widget_gtk1.cpp:38:
27:03.25 /usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox-95.0/widget/gtk/nsAppShell.cpp: In destructor 'virtual nsAppShell::nsAppShell()':
27:03.25 /usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox-95.0/widget/gtk/nsAppShell.cpp:113:3: error: 'StopDBusListening' was not declared in this scope
27:03.25 113 | StopDBusListening();
27:03.25 | ^
27:03.35 gmake[4]: Leaving directory '/usr/armv7a-unknown-linux-gnueabihf/tmp/portage/www-client/firefox-95.0/work/firefox_build/modules/xz-embedded'
Expected results:
I expect the compile to succed. The compressed build log is attached.
Updated•4 years ago
|
It might be a missing header, <dbus/dbus-glib-lowlevel.h> is part of dbus-glib
but if you can, you may want to avoid introducing it to new code, since its deprecated:
dbus-glib is a deprecated API for use of D-Bus from GLib applications. Do not use it in new code.
Since version 2.26, GLib's accompanying GIO library provides a high-level API for D-Bus, "GDBus", based on an independent reimplementation of the D-Bus protocol. The maintainers of D-Bus recommend that GLib applications should use GDBus instead of dbus-glib.
via: https://dbus.freedesktop.org/doc/dbus-glib/
also I passed --disable-dbus anyway.
Updated•4 years ago
|
Comment 2•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 3•4 years ago
|
||
Set release status flags based on info from the regressing bug 758848
Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Comment 7•4 years ago
|
||
tt_1, just curious, what platform are you building for and what are your reasons for using --disable-dbus
?
Comment 8•4 years ago
|
||
bugherder |
unfortunatley dbus-glib is pulled in, which is a deprecated abi, on top its a super cross-compile unfriendly package.
initially reported bug is fixed, thank you!
Description
•