Bug 1736822 [Linux] Don't call StopDBusListening() with --disable-dbus r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D129021